--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def meet(traveller): \n",
+    "def meet(traveller): #mee\n",
     "    welcome_message = \"Hi \" + traveller.title() + \", I'm so glad we'll be going on the trip together!\"\n",
     "    return welcome_message"
    ]
