automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,22 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hi Sally, I'm so glad we'll be going on the trip together!\""
+       "\"Hi Diego, I'm so glad we'll be going on the trip together!\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "meet('sally')"
+    "meet('diego')"
    ]
   },
   {
