--- a/index.ipynb
+++ b/index.ipynb
@@ -211,22 +211,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Hi Sally, I'm so glad we'll be going on the trip together!\""
+       "\"Hi Fred, I'm so glad we'll be going on the trip together!\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "meet('sally')"
+    "meet('fred')"
    ]
   },
   {
