automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -367,7 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_biggest_pop(list_pops_one, list_pops_two):#def\n",
+    "def find_biggest_pop(list_pops_one, list_pops_two):#defining function with two variables\n",
     "    mean_one = find_the_mean(list_pops_one)\n",
     "    mean_two = find_the_mean(list_pops_two)\n",
     "    if (mean_one > mean_two):\n",
